# retab

./: .gitignore  .goreleaser.yaml  BUILD.bazel  CONTRIBUTING.md  Correct_image_orientation_API.ipynb  EVALS_API_BUG_REPORT.md  README.md  README_new.md  dependency_scanner.py  script.py  summarize_examples_and_notebooks.py  summary_output.json  test copy.txt  test8.txt
cli/: .gitignore  BUILD.bazel  api-overlay-inventory.json  function-local-checks-blueprint.md  go.mod  go.sum  main.go
cli/cmd/: api_design_command_surface_test.go  api_design_consistency_test.go  api_design_nonworkflow_routes_test.go  auth.go  auth_test.go  background_lifecycle_test.go  bugfixes_round2_test.go  bugfixes_round3_test.go  bugfixes_round4_test.go  bugfixes_round5_test.go  bugfixes_test.go  classifications.go  classifications_delete_yes_test.go  classifications_first_n_pages_test.go  classifications_test.go  cli_reliability_fixes_test.go  cli_ux_fixes_test.go  common.go  common_test.go  config.go  config_test.go  configlock.go  configlock_unix.go  configlock_windows.go  credential.go  credential_test.go  debug_transport_test.go  deep_fixes_cli_test.go  document_resolution_order_test.go  edits.go  edits_delete_yes_test.go  edits_test.go  environments.go  environments_test.go  extractions.go  extractions_delete_yes_test.go  extractions_test.go  files.go  files_analyze.go  files_analyze_test.go  (+218 more)
cli/cmd/assets/: .gitignore
cli/cmd/tests/: conformance_test.go  doc.go
clients/dotnet/: .oagen-manifest.json  BUILD.bazel  README.md  Retab.csproj  Retab.sln
clients/dotnet/src/: FileRef.cs  MimeData.cs  Retab.Generated.cs  Retab.cs  RetabOptions.cs  WorkflowRunDocumentInput.cs
clients/dotnet/tests/: PaginationContractTests.cs  Retab.Tests.csproj  SmokeTests.cs
clients/go/: .golangci.yml  .oagen-manifest.json  BUILD.bazel  README.md  api_design_consistency_test.go  auth.go  auth_test.go  classifications.go  client.go  client_test.go  compat.go  edit_templates.go  edits.go  enums.go  environments.go  errors.go  experiment_run_metrics.go  experiment_run_results.go  experiment_runs.go  extractions.go  files.go  go.mod  jobs.go  jobs_paginated_envelope_test.go  mime.go  models.go  multipart.go  nested_services_test.go  node_parity.go  node_parity_test.go  paginated_list_decode_test.go  pagination.go  pagination_contract_test.go  pagination_seq.go  pagination_seq_test.go  pagination_test.go  parses.go  partitions.go  request.go  resources.go  (+36 more)
clients/java/: .oagen-manifest.json  BUILD.bazel  build.gradle.kts  checkstyle.xml  pom.xml  settings.gradle.kts
clients/java/scratch/: Driver.java
clients/node/: .eslintrc.cjs  .eslintrc.codex.cjs  .eslintrc.js  .gitignore  .oagen-manifest.json  BUILD.bazel  README.md  bunfig.toml  client.ts  example.ts  generate.ts  index.ts  jest.config.js  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  test.ts  test_circular_fix.js  test_pattern_methods.js  tsconfig.json
clients/node/scratch/: play.ts  play_full.ts
clients/node/scripts/: format-generated-sdk.mjs  format-generated-sdk.test.mjs
clients/node/src/: _pagination.ts  client.ts  errors.ts  generate.ts  generated_types.ts  index.ts  mime.ts  resource.ts  retab.ts  schema_types.ts  types.ts  utils.ts
clients/node/tests/: README.md  ai-models-utils.test.ts  automations.test.ts  basic.test.ts  bunfig.toml  classify_contract.test.ts  client.test.ts  consensus.test.ts  documents.test.ts  endpoints-automation.test.ts  error_handling.test.ts  errors.test.ts  evals.test.ts  evaluations-iterations.test.ts  evaluations.test.ts  files.test.ts  files_upload.test.ts  finetuning.test.ts  fixtures.ts  generated_sdk_smoke.test.ts  jobs.test.ts  links-automation.test.ts  live-preflight.test.ts  live-preflight.ts  live.ts  mime-utils.test.ts  models.test.ts  pagination-contract.test.ts  pagination.test.ts  probe_real_backend_shape.test.ts  projects.test.ts  projects_resources.test.ts  python-node-parity.test.ts  python_parity.test.ts  resource_list_filters.test.ts  resources.test.ts  responses-utils.test.ts  schema.test.ts  sdk-structure-parity.test.ts  sdk_api_design_consistency.test.ts  (+17 more)
clients/php/: .gitignore  .oagen-manifest.json  .php-cs-fixer.dist.php  BUILD.bazel  LICENSE  README.md  composer.json  phpstan.neon  phpunit.xml
clients/php/lib/: Client.php  HttpClient.php  PaginatedResponse.php  RequestOptions.php  TestHelper.php
clients/php/tests/: ClientTest.php  DiscriminatedUnionResponseTest.php  MimeSmokeTest.php  PaginationContractTest.php
clients/python/: .env.local.example  .oagen-manifest.json  BUILD.bazel  README.md  generate_types.bash  pyproject.toml  requirements.txt  script.bash  setup.py  types.ts
clients/python/.scripts/: test.sh
clients/python/retab/: __init__.py  _resource.py  client copy.py  client.py  exceptions.py  generate_types.py
clients/python/test_venv/: pyvenv.cfg
clients/python/tests/: Readme.md  conftest.py  factories.py  mocks.py  samples.py  test_async_auto_pagination.py  test_automations_links.py  test_automations_mailboxes.py  test_creditless_edgecases.py  test_creditless_extra_edits.py  test_creditless_extra_workflow_graph.py  test_creditless_extra_workflow_runtime.py  test_creditless_processing_resources.py  test_creditless_storage_config.py  test_creditless_storage_files.py  test_creditless_storage_tables.py  test_datasets_iterations.py  test_deep_fixes.py  test_documents_api.py  test_error_handling.py  test_evals_resources.py  test_evaluations.py  test_file_ref_contract.py  test_import_contract.py  test_jobs.py  test_live_preflight.py  test_mime_data.py  test_mime_data_urls.py  test_pagination_contract.py  (+21 more)
clients/ruby/: .oagen-manifest.json  .rubocop.yml  .rubocop_todo.yml  BUILD.bazel  Gemfile  RELEASING.md  retab-0.1.0.gem  retab-0.1.1.gem  retab-0.1.10.gem  retab-0.1.11.gem  retab-0.1.2.gem  retab-0.1.3.gem  retab-0.1.4.gem  retab-0.1.5.gem  retab-0.1.6.gem  retab-0.1.7.gem  retab-0.1.9.gem  retab.gemspec
clients/rust/: .oagen-manifest.json  BUILD.bazel  Cargo.toml  README.md
mcp/python/: README.md  main.py  pyproject.toml  requirements.txt
(+5037 files in other folders)
