load("//tools/bazel:defs.bzl", "MANUAL_LOCAL_TAGS")
load("//tools/bazel:sdk_generation.bzl", "sdk_generation_tree")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "generation_inputs",
    srcs = glob([
        "clients/**",
    ]) + [
        "//.scripts:sdk_generation_scripts",
        "//open-source/docs/api-reference:checked_openapi_json",
        "//open-source/sdk/cli:sources",
    ],
)

sh_test(
    name = "check_python",
    srcs = ["//tools/bazel:check_generated_sdk_tree.sh"],
    args = [
        "python",
        "$(location :generated_python_sdk)",
        "open-source/sdk/clients/python",
    ],
    data = [
        ":generated_python_sdk",
        ":generation_inputs",
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)

sh_test(
    name = "check_node",
    srcs = ["//tools/bazel:check_generated_sdk_tree.sh"],
    args = [
        "node",
        "$(location :generated_node_sdk)",
        "open-source/sdk/clients/node",
    ],
    data = [
        ":generated_node_sdk",
        ":generation_inputs",
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)

sdk_generation_tree(
    name = "generated_python_sdk",
    language = "python",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_node_sdk",
    language = "node",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sh_test(
    name = "check_go",
    srcs = ["//tools/bazel:check_generated_sdk_tree.sh"],
    args = [
        "go",
        "$(location :generated_go_sdk)",
        "open-source/sdk/clients/go",
    ],
    data = [
        ":generated_go_sdk",
        ":generation_inputs",
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)

sh_test(
    name = "check_rust",
    srcs = ["//tools/bazel:check_generated_sdk_tree.sh"],
    args = [
        "rust",
        "$(location :generated_rust_sdk)",
        "open-source/sdk/clients/rust",
    ],
    data = [
        ":generated_rust_sdk",
        ":generation_inputs",
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)

sh_test(
    name = "check_dotnet",
    srcs = ["//tools/bazel:check_generated_sdk_tree.sh"],
    args = [
        "dotnet",
        "$(location :generated_dotnet_sdk)",
        "open-source/sdk/clients/dotnet",
    ],
    data = [
        ":generated_dotnet_sdk",
        ":generation_inputs",
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)

sh_test(
    name = "check_php",
    srcs = ["//tools/bazel:check_generated_sdk_tree.sh"],
    args = [
        "php",
        "$(location :generated_php_sdk)",
        "open-source/sdk/clients/php",
    ],
    data = [
        ":generated_php_sdk",
        ":generation_inputs",
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)

sh_test(
    name = "check_ruby",
    srcs = ["//tools/bazel:check_generated_sdk_tree.sh"],
    args = [
        "ruby",
        "$(location :generated_ruby_sdk)",
        "open-source/sdk/clients/ruby",
    ],
    data = [
        ":generated_ruby_sdk",
        ":generation_inputs",
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)

sh_test(
    name = "check_java",
    srcs = ["//tools/bazel:check_generated_sdk_tree.sh"],
    args = [
        "java",
        "$(location :generated_java_sdk)",
        "open-source/sdk/clients/java",
    ],
    data = [
        ":generated_java_sdk",
        ":generation_inputs",
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)

sdk_generation_tree(
    name = "generated_go_sdk",
    language = "go",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_rust_sdk",
    language = "rust",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_dotnet_sdk",
    language = "dotnet",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_php_sdk",
    language = "php",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_ruby_sdk",
    language = "ruby",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_java_sdk",
    language = "java",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

SDK_UPDATE_SPECS = [
    {
        "check": ":check_python",
        "client": "open-source/sdk/clients/python",
        "generated": ":generated_python_sdk",
        "language": "python",
        "snippet": "//open-source/docs:snippet_lint_python",
    },
    {
        "check": ":check_node",
        "client": "open-source/sdk/clients/node",
        "generated": ":generated_node_sdk",
        "language": "node",
        "snippet": "//open-source/docs:snippet_lint_typescript",
    },
    {
        "check": ":check_go",
        "client": "open-source/sdk/clients/go",
        "generated": ":generated_go_sdk",
        "language": "go",
        "snippet": "//open-source/docs:snippet_lint_go",
    },
    {
        "check": ":check_rust",
        "client": "open-source/sdk/clients/rust",
        "generated": ":generated_rust_sdk",
        "language": "rust",
        "snippet": "//open-source/docs:snippet_lint_rust",
    },
    {
        "check": ":check_dotnet",
        "client": "open-source/sdk/clients/dotnet",
        "generated": ":generated_dotnet_sdk",
        "language": "dotnet",
        "snippet": "//open-source/docs:snippet_lint_dotnet",
    },
    {
        "check": ":check_php",
        "client": "open-source/sdk/clients/php",
        "generated": ":generated_php_sdk",
        "language": "php",
        "snippet": "//open-source/docs:snippet_lint_php",
    },
    {
        "check": ":check_ruby",
        "client": "open-source/sdk/clients/ruby",
        "generated": ":generated_ruby_sdk",
        "language": "ruby",
        "snippet": "//open-source/docs:snippet_lint_ruby",
    },
    {
        "check": ":check_java",
        "client": "open-source/sdk/clients/java",
        "generated": ":generated_java_sdk",
        "language": "java",
        "snippet": "//open-source/docs:snippet_lint_java",
    },
]

[
    sh_binary(
        name = "generated_%s_sdk_update" % spec["language"],
        srcs = ["//tools/bazel:update_generated_sdk_tree.sh"],
        args = [
            spec["language"],
            "$(location %s)" % spec["generated"],
            spec["client"],
            "//open-source/sdk:check_%s" % spec["language"],
            spec["snippet"],
        ],
        data = [
            spec["generated"],
            ":generation_inputs",
        ],
        tags = MANUAL_LOCAL_TAGS + ["generated-update"],
    )
    for spec in SDK_UPDATE_SPECS
]

sh_binary(
    name = "generated_sdks_update",
    srcs = ["//tools/bazel:update_generated_sdks.sh"],
    args = [
        "$(location //tools/bazel:update_generated_sdk_tree.sh)",
    ] + [
        item
        for spec in SDK_UPDATE_SPECS
        for item in [
            spec["language"],
            "$(location %s)" % spec["generated"],
            spec["client"],
            "//open-source/sdk:check_%s" % spec["language"],
            spec["snippet"],
        ]
    ],
    data = [
        "//tools/bazel:update_generated_sdk_tree.sh",
        ":generation_inputs",
    ] + [
        spec["generated"]
        for spec in SDK_UPDATE_SPECS
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-update"],
)

[
    test_suite(
        name = "generated_%s_sdk_check" % spec["language"],
        tests = [spec["check"]],
    )
    for spec in SDK_UPDATE_SPECS
]

test_suite(
    name = "generated_sdks",
    tests = [
        ":check_python",
        ":check_node",
        ":check_go",
        ":check_rust",
        ":check_dotnet",
        ":check_php",
        ":check_ruby",
        ":check_java",
    ],
)

test_suite(
    name = "generated_sdks_check",
    tests = [
        ":generated_sdks",
    ],
)

test_suite(
    name = "experimental_generated_sdks",
    tests = [],
)

test_suite(
    name = "lint",
    tests = [
        "//open-source/sdk/clients/node:lint",
        "//open-source/sdk/clients/python:lint",
    ],
)

test_suite(
    name = "format_check",
    tests = [
        "//open-source/sdk/clients/node:format_check",
        "//open-source/sdk/clients/python:format_check",
    ],
)

test_suite(
    name = "client_tests",
    tests = [
        "//open-source/sdk/clients/node:test",
        "//open-source/sdk/clients/python:test",
    ],
)

test_suite(
    name = "test_unit",
    tests = [
        ":client_tests",
    ],
)

test_suite(
    name = "typecheck",
    tests = [
        ":lint",
    ],
)

test_suite(
    name = "smoke",
    tests = [
        ":format_check",
        ":lint",
    ],
)

test_suite(
    name = "quality",
    tests = [
        ":client_tests",
        ":format_check",
        ":lint",
        ":smoke",
        ":test_unit",
        ":typecheck",
    ],
)

sh_test(
    name = "check_all",
    srcs = ["//tools/bazel:run_sdk_generation_check.sh"],
    data = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)
