load("//tools/bazel:defs.bzl", "LOCAL_TAGS", "MANUAL_LOCAL_TAGS")
load("//tools/bazel:sdk_generation.bzl", "sdk_generation_tree")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sdk_generation_common_inputs",
    srcs = [
        "//.scripts:sdk_generation_scripts",
        "//:oagen_generation_inputs",
        "//open-source/docs/api-reference:checked_openapi_json",
    ],
)

SDK_CLIENT_INPUT_EXCLUDES = [
    "clients/*/.bundle/**",
    "clients/*/.gradle/**",
    "clients/*/.phpunit.cache/**",
    "clients/*/.ruff_cache/**",
    "clients/*/.pytest_cache/**",
    "clients/*/__pycache__/**",
    "clients/*/artifacts/**",
    "clients/*/bin/**",
    "clients/*/build/**",
    "clients/*/dist/**",
    "clients/*/node_modules/**",
    "clients/*/nupkg/**",
    "clients/*/obj/**",
    "clients/*/retab.egg-info/**",
    "clients/*/target/**",
    "clients/*/test_venv/**",
    "clients/*/vendor/**",
]

SDK_LANGUAGE_SPECS = [
    {
        "language": "python",
        "target": "snippet_python_sdk",
    },
    {
        "language": "node",
        "target": "snippet_node_sdk",
    },
    {
        "language": "go",
        "target": "snippet_go_sdk",
    },
    {
        "language": "rust",
        "target": "snippet_rust_sdk",
    },
    {
        "language": "dotnet",
        "target": "snippet_dotnet_sdk",
    },
    {
        "language": "php",
        "target": "snippet_php_sdk",
    },
    {
        "language": "ruby",
        "target": "snippet_ruby_sdk",
    },
    {
        "language": "java",
        "target": "snippet_java_sdk",
    },
]

[
    filegroup(
        name = "%s_sdk_seed_inputs" % spec["language"],
        srcs = glob(
            ["clients/%s/**" % spec["language"]],
            exclude = SDK_CLIENT_INPUT_EXCLUDES,
        ),
    )
    for spec in SDK_LANGUAGE_SPECS
]

filegroup(
    name = "generation_inputs",
    srcs = glob(
        ["clients/**"],
        exclude = SDK_CLIENT_INPUT_EXCLUDES,
    ) + [
        ":sdk_generation_common_inputs",
        "//open-source/sdk/cli:sources",
    ],
)

# Fully hermetic Python SDK drift check (blueprint Phase 4, Python; mirrors
# check_node): runs SANDBOXED with no network and is cached on no-op reruns. Both
# inputs are Bazel-declared TreeArtifacts:
#   * generated_python_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure) re-formatted with the
#     lockfile-pinned, vendored ruff 0.15.13 binary via
#     //tools/bazel/ruff_sdk_tree (line-length 180, target-version py312,
#     --isolated -- the committed pyproject.toml [tool.ruff] config).
#   * committed_python_sdk_tree -- the committed retab/resources/** +
#     retab/types/** generated .py files + manifest staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT.
sh_test(
    name = "check_python",
    srcs = ["//tools/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "python",
        "$(location //open-source/sdk/clients/python:generated_python_sdk_formatted)",
        "$(location //open-source/sdk/clients/python:committed_python_sdk_tree)",
    ],
    data = [
        "//open-source/sdk/clients/python:committed_python_sdk_tree",
        "//open-source/sdk/clients/python:generated_python_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic Node SDK drift check (blueprint Phase 4, gold standard): runs
# SANDBOXED with no network and is cached on no-op reruns. Both inputs are
# Bazel-declared TreeArtifacts:
#   * generated_node_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure) re-formatted with the Node SDK
#     client's own vendored prettier (node_sdk_npm).
#   * committed_node_sdk_tree -- the committed src/ + manifest staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT. The retab-node-oagen-emitter service
# boundary selects this target for real regenerate-and-diff drift coverage,
# instead of the //api-quality:unit_tests proxy other (still-manual) languages
# use.
sh_test(
    name = "check_node",
    srcs = ["//tools/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "node",
        "$(location //open-source/sdk/clients/node:generated_node_sdk_formatted)",
        "$(location //open-source/sdk/clients/node:committed_node_sdk_tree)",
    ],
    data = [
        "//open-source/sdk/clients/node:committed_node_sdk_tree",
        "//open-source/sdk/clients/node:generated_node_sdk_formatted",
    ],
    tags = ["generated-check"],
)

sdk_generation_tree(
    name = "generated_python_sdk",
    language = "python",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

# Generate from the committed OpenAPI contract (checked_openapi_json), not the
# live-backend genrule, so SDK drift is decoupled from backend regeneration and
# the check is hermetic. Pinned Node toolchain is threaded in by the rule.
sdk_generation_tree(
    name = "generated_node_sdk",
    language = "node",
    openapi = "//open-source/docs/api-reference:checked_openapi_json",
    srcs = [":generation_inputs"],
    tags = LOCAL_TAGS + ["generated-artifact"],
)

# Fully hermetic Go SDK drift check (blueprint Phase 4, Go): mirrors check_node.
# Runs SANDBOXED with no network and is cached on no-op reruns. Both inputs are
# Bazel-declared TreeArtifacts:
#   * generated_go_sdk_formatted -- the raw generator output (sandboxed, from the
#     committed OpenAPI contract on the pinned Node toolchain via the lockfile-
#     materialized oagen_npm closure) re-formatted with //tools/bazel/gofmt_sdk_tree
#     (a rules_go go_binary running the gofmt engine on the pinned Go toolchain).
#   * committed_go_sdk_tree -- the committed non-test root *.go + go.mod + manifest
#     staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT.
sh_test(
    name = "check_go",
    srcs = ["//tools/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "go",
        "$(location //open-source/sdk/clients/go:generated_go_sdk_formatted)",
        "$(location //open-source/sdk/clients/go:committed_go_sdk_tree)",
    ],
    data = [
        "//open-source/sdk/clients/go:committed_go_sdk_tree",
        "//open-source/sdk/clients/go:generated_go_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic Rust SDK drift check (blueprint Phase 4, Rust): mirrors
# check_go/check_node. Runs SANDBOXED with no network and is cached on no-op
# reruns. Both inputs are Bazel-declared TreeArtifacts:
#   * generated_rust_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure) re-formatted with the pinned,
#     vendored rustfmt binary via //tools/bazel/rustfmt_sdk_tree (the rustc
#     runtime libs travel with it; the format script points the dynamic loader
#     at their dir). Scoped to src/** + manifest (Node parity).
#   * committed_rust_sdk_tree -- the committed src/**/*.rs + manifest staged into
#     a tree. The hand-bumped Cargo.toml/Cargo.lock, LICENSE, README and the
#     hand-written tests/ are NOT generated and are excluded.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT.
sh_test(
    name = "check_rust",
    srcs = ["//tools/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "rust",
        "$(location //open-source/sdk/clients/rust:generated_rust_sdk_formatted)",
        "$(location //open-source/sdk/clients/rust:committed_rust_sdk_tree)",
    ],
    data = [
        "//open-source/sdk/clients/rust:committed_rust_sdk_tree",
        "//open-source/sdk/clients/rust:generated_rust_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic .NET SDK drift check (blueprint Phase 4, gold standard): runs
# SANDBOXED with no network and is cached on no-op reruns. Both inputs are
# Bazel-declared TreeArtifacts:
#   * generated_dotnet_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure), scoped to src/ + manifest. The
#     dotnet emitter already emits correctly-formatted C#, so unlike Node/Go/Java
#     there is NO downstream formatter step and NO .NET SDK toolchain.
#   * committed_dotnet_sdk_tree -- the committed src/ + manifest staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp). The release Version in Retab.csproj and the
# hand-extended tests/ are intentionally out of scope (Node parity excludes
# package.json + tests). The retab-dotnet-oagen-emitter service boundary selects
# this target for real regenerate-and-diff drift coverage instead of the
# //api-quality:unit_tests proxy.
sh_test(
    name = "check_dotnet",
    srcs = ["//tools/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "dotnet",
        "$(location //open-source/sdk/clients/dotnet:generated_dotnet_sdk_formatted)",
        "$(location //open-source/sdk/clients/dotnet:committed_dotnet_sdk_tree)",
    ],
    data = [
        "//open-source/sdk/clients/dotnet:committed_dotnet_sdk_tree",
        "//open-source/sdk/clients/dotnet:generated_dotnet_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic PHP SDK drift check (blueprint Phase 4, PHP; mirrors check_node):
# runs SANDBOXED with no network and is cached on no-op reruns. Both inputs are
# Bazel-declared TreeArtifacts:
#   * generated_php_sdk_formatted -- the raw generator output (sandboxed, from the
#     committed OpenAPI contract on the pinned Node toolchain via the lockfile-
#     materialized oagen_npm closure) re-formatted with //tools/bazel/php_cs_fixer_sdk_tree
#     (the vendored, pinned static PHP 8.5.6 CLI running php-cs-fixer 3.95.2),
#     scoped to the generated lib/ + tests/ + manifest set.
#   * committed_php_sdk_tree -- the committed generated lib/ + tests/ + manifest
#     staged into a tree (hand-maintained runtime/test helpers, composer.*,
#     phpstan/phpunit config, .php-cs-fixer.dist.php, README/LICENSE excluded).
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT. The retab-php-oagen-emitter service
# boundary selects this target for real regenerate-and-diff drift coverage instead
# of the //api-quality:unit_tests proxy.
sh_test(
    name = "check_php",
    srcs = ["//tools/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "php",
        "$(location //open-source/sdk/clients/php:generated_php_sdk_formatted)",
        "$(location //open-source/sdk/clients/php:committed_php_sdk_tree)",
    ],
    data = [
        "//open-source/sdk/clients/php:committed_php_sdk_tree",
        "//open-source/sdk/clients/php:generated_php_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic Ruby SDK drift check (blueprint Phase 4, gold standard; mirrors
# check_node): runs SANDBOXED with no network and is cached on no-op reruns. Both
# inputs are Bazel-declared TreeArtifacts:
#   * generated_ruby_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure) re-formatted with the vendored,
#     lockfile-pinned rubyfmt binary (//tools/bazel/rubyfmt_sdk_tree:rubyfmt).
#   * committed_ruby_sdk_tree -- the committed lib/ + rbi/ + generated test/ +
#     Gemfile + retab.gemspec + manifest staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. The
# retab-ruby-oagen-emitter service boundary selects this target for real
# regenerate-and-diff drift coverage, instead of the //api-quality:unit_tests
# proxy other (still-manual) languages use.
sh_test(
    name = "check_ruby",
    srcs = ["//tools/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "ruby",
        "$(location //open-source/sdk/clients/ruby:generated_ruby_sdk_formatted)",
        "$(location //open-source/sdk/clients/ruby:committed_ruby_sdk_tree)",
    ],
    data = [
        "//open-source/sdk/clients/ruby:committed_ruby_sdk_tree",
        "//open-source/sdk/clients/ruby:generated_ruby_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic Java SDK drift check (blueprint Phase 4, Java; mirrors
# check_node): runs SANDBOXED with no network and is cached on no-op reruns. Both
# inputs are Bazel-declared TreeArtifacts:
#   * generated_java_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure) re-formatted with google-java-format
#     1.35.0 (the Spotless engine, pinned via http_file) run under Bazel's hermetic
#     JDK toolchain.
#   * committed_java_sdk_tree -- the committed src/ + build/config files + manifest
#     staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT.
sh_test(
    name = "check_java",
    srcs = ["//tools/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "java",
        "$(location //open-source/sdk/clients/java:generated_java_sdk_formatted)",
        "$(location //open-source/sdk/clients/java:committed_java_sdk_tree)",
    ],
    data = [
        "//open-source/sdk/clients/java:committed_java_sdk_tree",
        "//open-source/sdk/clients/java:generated_java_sdk_formatted",
    ],
    tags = ["generated-check"],
)

sdk_generation_tree(
    name = "generated_go_sdk",
    language = "go",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_rust_sdk",
    language = "rust",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_dotnet_sdk",
    language = "dotnet",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_php_sdk",
    language = "php",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_ruby_sdk",
    language = "ruby",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_java_sdk",
    language = "java",
    openapi = "//open-source/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

[
    sdk_generation_tree(
        name = spec["target"],
        language = spec["language"],
        # Snippet lint is downstream of the checked generated artifact. The
        # dedicated openapi_check target owns backend -> openapi freshness.
        openapi = "//open-source/docs/api-reference:checked_openapi_json",
        srcs = [
            ":sdk_generation_common_inputs",
            ":%s_sdk_seed_inputs" % spec["language"],
        ],
        format = False,
        tags = MANUAL_LOCAL_TAGS + ["generated-artifact", "snippet-sdk"],
    )
    for spec in SDK_LANGUAGE_SPECS
]

SDK_UPDATE_SPECS = [
    {
        "check": ":check_python",
        "client": "open-source/sdk/clients/python",
        "generated": "//open-source/sdk/clients/python:generated_python_sdk_formatted",
        "language": "python",
        "snippet": "//open-source/docs:snippet_lint_python",
    },
    {
        "check": ":check_node",
        "client": "open-source/sdk/clients/node",
        "generated": ":generated_node_sdk",
        "language": "node",
        "snippet": "//open-source/docs:snippet_lint_typescript",
    },
    {
        "check": ":check_go",
        "client": "open-source/sdk/clients/go",
        "generated": ":generated_go_sdk",
        "language": "go",
        "snippet": "//open-source/docs:snippet_lint_go",
    },
    {
        "check": ":check_rust",
        "client": "open-source/sdk/clients/rust",
        "generated": ":generated_rust_sdk",
        "language": "rust",
        "snippet": "//open-source/docs:snippet_lint_rust",
    },
    {
        "check": ":check_dotnet",
        "client": "open-source/sdk/clients/dotnet",
        "generated": ":generated_dotnet_sdk",
        "language": "dotnet",
        "snippet": "//open-source/docs:snippet_lint_dotnet",
    },
    {
        "check": ":check_php",
        "client": "open-source/sdk/clients/php",
        "generated": ":generated_php_sdk",
        "language": "php",
        "snippet": "//open-source/docs:snippet_lint_php",
    },
    {
        "check": ":check_ruby",
        "client": "open-source/sdk/clients/ruby",
        "generated": ":generated_ruby_sdk",
        "language": "ruby",
        "snippet": "//open-source/docs:snippet_lint_ruby",
    },
    {
        "check": ":check_java",
        "client": "open-source/sdk/clients/java",
        "generated": ":generated_java_sdk",
        "language": "java",
        "snippet": "//open-source/docs:snippet_lint_java",
    },
]

[
    sh_binary(
        name = "generated_%s_sdk_update" % spec["language"],
        srcs = ["//tools/bazel:update_generated_sdk_tree.sh"],
        args = [
            spec["language"],
            "$(location %s)" % spec["generated"],
            spec["client"],
            "//open-source/sdk:check_%s" % spec["language"],
            spec["snippet"],
        ],
        data = [
            spec["generated"],
            ":generation_inputs",
        ],
        tags = MANUAL_LOCAL_TAGS + ["generated-update"],
    )
    for spec in SDK_UPDATE_SPECS
]

sh_binary(
    name = "generated_sdks_update",
    srcs = ["//tools/bazel:update_generated_sdks.sh"],
    args = [
        "$(location //tools/bazel:update_generated_sdk_tree.sh)",
    ] + [
        item
        for spec in SDK_UPDATE_SPECS
        for item in [
            spec["language"],
            "$(location %s)" % spec["generated"],
            spec["client"],
            "//open-source/sdk:check_%s" % spec["language"],
            spec["snippet"],
        ]
    ],
    data = [
        "//tools/bazel:update_generated_sdk_tree.sh",
        ":generation_inputs",
    ] + [
        spec["generated"]
        for spec in SDK_UPDATE_SPECS
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-update"],
)

[
    test_suite(
        name = "generated_%s_sdk_check" % spec["language"],
        tests = [spec["check"]],
    )
    for spec in SDK_UPDATE_SPECS
]

test_suite(
    name = "generated_sdks",
    tests = [
        "//tools/bazel:oagen_core_dist_freshness",
        ":check_python",
        ":check_node",
        ":check_go",
        ":check_rust",
        ":check_dotnet",
        ":check_php",
        ":check_ruby",
        ":check_java",
    ],
)

test_suite(
    name = "generated_sdks_check",
    tests = [
        ":generated_sdks",
    ],
)

test_suite(
    name = "experimental_generated_sdks",
    tests = [],
)

test_suite(
    name = "lint",
    tests = [
        "//open-source/sdk/clients/node:lint",
        "//open-source/sdk/clients/python:lint",
    ],
)

test_suite(
    name = "format_check",
    tests = [
        "//open-source/sdk/clients/node:format_check",
        "//open-source/sdk/clients/python:format_check",
    ],
)

test_suite(
    name = "client_tests",
    tests = [
        "//open-source/sdk/clients/node:test",
        "//open-source/sdk/clients/python:test",
    ],
)

test_suite(
    name = "test_unit",
    tests = [
        ":client_tests",
    ],
)

test_suite(
    name = "typecheck",
    tests = [
        ":lint",
    ],
)

test_suite(
    name = "smoke",
    tests = [
        ":format_check",
        ":lint",
    ],
)

test_suite(
    name = "quality",
    tests = [
        ":client_tests",
        ":format_check",
        ":lint",
        ":smoke",
        ":test_unit",
        ":typecheck",
    ],
)

sh_test(
    name = "check_all",
    srcs = ["//tools/bazel:run_sdk_generation_check.sh"],
    data = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)
